--- a/index.html
+++ b/index.html
@@ -31,6 +31,20 @@
 </section>
 <section class="container grid" id="product-list"></section>
 
+<section class="section section-about">
+  <div class="container">
+    <h3 class="section-title">Sobre nós</h3>
+    <p class="section-text">
+      Produzimos cupcakes artesanais com ingredientes selecionados
+      e muito carinho em cada detalhe.
+    </p>
+  </div>
+</section>
+
+<footer class="footer">
+  <p>© Cupcake & Amor 🧁❤️</p>
+</footer>
+
  <script src="js/data.js"></script>
   <script src="js/render.js"></script>
 </body>
