--- a/index.html
+++ b/index.html
@@ -23,26 +23,48 @@
   </div>
 </header>
 <section class="hero">
-  <div class="container">
-    <h2>Cupcakes artesanais feitos com amor</h2>
-    <p>Sabor, carinho e doçura em cada mordida</p>
-    <button class="btn btn-primary">Ver Cupcakes</button>
+  <div class="container hero-layout">
+
+    <div class="hero-content">
+      <h2>Cupcakes artesanais feitos com amor</h2>
+      <p>Sabor, carinho e doçura em cada mordida</p>
+      <button class="btn btn-primary">Ver Cupcakes</button>
+    </div>
+
+    <div class="hero-image">
+      <img
+        src="./img/—Pngtree—sweet cupcake with chocolate cookie_14659421.png"
+        alt="Cupcakes artesanais decorados">
+    </div>
+
   </div>
 </section>
 <section class="container grid" id="product-list"></section>
 
 <section class="section section-about">
-  <div class="container">
-    <h3 class="section-title">Sobre nós</h3>
-    <p class="section-text">
-      Produzimos cupcakes artesanais com ingredientes selecionados
-      e muito carinho em cada detalhe.
-    </p>
+  <div class="container about-layout">
+    
+    <div class="about-image">
+      <img 
+        src="https://images.unsplash.com/photo-1603532648955-039310d9ed75"
+        alt="Cupcakes artesanais sendo preparados">
+    </div>
+
+    <div class="about-content">
+      <h3 class="section-title">Sobre Nós</h3>
+      <p class="section-text">
+        Na Cupcake & Amor, acreditamos que um cupcake é mais do que um doce - é uma experiência de sabor e afeto. Nossos cupcakes são feitos artesanalmente com ingredientes frescos e de alta qualidade, combinando sabores clássicos e inovações criativas. </p> 
+        <p class="section-text"> Cada cupcake é preparado com cuidado e dedicação, garantindo que cada mordida seja repleta de sabor e carinho. Seja para uma celebração especial ou para adoçar o dia a dia, nossos cupcakes são a escolha perfeita para quem busca um momento de prazer e doçura.
+      </p>
+      <p class="text-special">Com carinho, Cupcake & Amor...
+      </p>
+    </div>
+
   </div>
 </section>
 
 <footer class="footer">
-  <p>© Cupcake & Amor 🧁❤️</p>
+  <p>© Cupcake & Amor - 2026</p>
 </footer>
 
  <script src="js/data.js"></script>
