products and cart

--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cupcakes</title>
-  <link rel="stylesheet" href="css/base.css">
-  <link rel="stylesheet" href="css/layout.css">
-  <link rel="stylesheet" href="css/components.css">
-  <link rel="stylesheet" href="css/pages.css">
+  <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
@@ -16,9 +14,9 @@
   <div class="container nav">
     <h1 class="logo">Cupcake & Amor</h1>
     <nav class="menu">
-      <a href="#">Home</a>
-      <a href="#">Cupcakes</a>
-      <a href="#">Carrinho</a>
+      <a href="index.html">Home</a>
+      <a href="produtos.html">Produtos</a>
+      <a href="carrinho.html">Carrinho</a>
     </nav>
   </div>
 </header>
@@ -33,7 +31,7 @@
 
     <div class="hero-image">
       <img
-        src="./img/—Pngtree—sweet cupcake with chocolate cookie_14659421.png"
+        src="./img/img-hero.png"
         alt="Cupcakes artesanais decorados">
     </div>
 
